--- a/my-app/src/Global.css
+++ b/my-app/src/Global.css
@@ -16,10 +16,9 @@ code {
 }
 .App {
   display : flex;
-  flex-direction :column;
   align-items : center;
   justify-content : center;
-  
+  background-color: aqua;
   font-family: 'Press Start 2P', cursive;
   font-size:0.8rem;
  
