--- a/my-app/src/Game/Style/components/Game.css
+++ b/my-app/src/Game/Style/components/Game.css
@@ -5,5 +5,6 @@
     width: 1280px;
     transform: scale(1);
     user-select: none;
-    background: black;
+    background: gray;
+    overflow: hidden;
 }
