--- a/my-app/src/Game/Style/components/Terrain.css
+++ b/my-app/src/Game/Style/components/Terrain.css
@@ -2,4 +2,6 @@
     background-image: url("../../Assets/terrain/wallpaperbetter.com_1280x1024.jpg") ;
     background-repeat: no-repeat;
     background-size: cover;
+    height:1500px;
+    width:2400px;
 }
