--- a/my-app/src/Game/Style/components/Terrain.css
+++ b/my-app/src/Game/Style/components/Terrain.css
@@ -1,7 +1,8 @@
 .terrain{
+    position : absolute;
     background-image: url("../../Assets/terrain/wallpaperbetter.com_1280x1024.jpg") ;
     background-repeat: no-repeat;
     background-size: cover;
-    height:1500px;
-    width:2400px;
+    height:2000px;
+    width:2900px;
 }
