--- a/my-app/src/Game/Style/components/Game.css
+++ b/my-app/src/Game/Style/components/Game.css
@@ -1,6 +1,9 @@
-* { transform-style: preserve-3d }
-.game{
-    display:flex;
+* {
+    transform-style: preserve-3d
+}
+
+.game {
+    display: flex;
     position: absolute;
     height: 720px;
     width: 1280px;
@@ -8,14 +11,20 @@
     user-select: none;
     background: cadetblue;
     overflow: hidden;
-   perspective: 800px;
+    perspective: 800px;
 }
 
-.camera{
-    width: 0px; height: 0px; position: relative; left: 0px; top: 0px;
+.camera {
+    width: 0px;
+    height: 0px;
+    position: relative;
+    left: 0px;
+    top: 0px;
 }
 
-.scene{
-    width: 2500px; height: 1800px; transform-origin: 0 0;
-    transform: rotateX(50deg) translateZ(-170px) ;
+.scene {
+    width: 2500px;
+    height: 1800px;
+    transform-origin: 0 0;
+    transform: rotateX(50deg) translateZ(-170px);
 }
