--- a/src/Global.css
+++ b/src/Global.css
@@ -8,7 +8,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: gainsboro;
+    overflow-x: hidden;
 }
+html { overflow-x: hidden;}
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -19,7 +21,7 @@ code {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: aqua;
+    background-color: rgb(68, 87, 87);
     font-family: 'Press Start 2P', cursive;
     font-size: 0.8rem;
 
