--- a/src/Game/Style/components/Menu.css
+++ b/src/Game/Style/components/Menu.css
@@ -1,27 +1,51 @@
 h1{
-    margin: 0.5rem;
+    margin: 0;
+    margin-top: 0.5rem;
     font-size: 2rem;
-    height : 10vh;
+  
   }
-h6{
+h6{ position: relative;
     padding:0;
     margin:0;
-    position: relative;
-    top : -3.5rem;
-    left :9rem;
-    transform: rotate(-10deg);
     font-size: 0.6rem;
+    align-self: flex-end;
+    left : 75px;
+    transform: rotate(-10deg);
 }
-
-
-
+.player-gold{
+    padding:0;
+    margin:0;
+ align-self: start;
+}
+.title{
+   
+    display: flex;
+    flex-direction: column;
+    width:320px;
+    
+}
+.menu-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:  rgba(255, 255, 255, 0.3);
+    border-radius : 5px;
+    padding : 0.2rem  0.5rem ;
+    border : 2px double black;
+    width: 60vw;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
+    margin-top: 1vh;
+}
 .menu-container {
     z-index: 10;
     position: absolute;
     top:0vh;
     left : 0;
     width: 100vw;
-    height: 95vh;
+    height: 98vh;
     margin: 0 ;
     background-color:transparent;
     display: flex;
@@ -42,6 +66,8 @@ h6{
     background-color: #888;
     border-radius:  0 5px 5px 0  ;
   }
+
+
 
 .btn-start , .btn-generate {
     background-color: #0099ff;
@@ -75,20 +101,7 @@ label {
     font-size: 1rem;
     text-align: center;
 }
-.menu-card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color:  rgba(255, 255, 255, 0.3);
-    border-radius : 5px;
-    padding : 0.2rem  0.5rem ;
-    border : 2px double black;
-    width: 60vw;
-    overflow-y: auto;
-    overflow-x: hidden;
-    -ms-overflow-style: none;  
-    scrollbar-width: none;  
-}
+
 .flex { 
     display: flex;
     align-items: center;
@@ -123,4 +136,7 @@ width: 100%;
 }
 .w-5rem{
     width: 5rem;
+}
+.h-6rem{ 
+    height: 6rem;
 }
